--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         // Função para trocar a câmera
         function switchCamera() {
             currentFacingMode = (currentFacingMode === 'environment') ? 'user' : 'environment';
-            startCamera(currentFacingMode);
+            startCamera(currentFacingMode); // Inicia a câmera com o modo alterado
         }
 
         // Inicia a câmera com a câmera traseira (default)
