--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transform: scaleX(-1); /* Espelha o vídeo */
+            transform: scaleX(-1); /* Espelha o vídeo para comportamento mais natural */
         }
 
         /* Metade da tela com o efeito vermelho (olho esquerdo) */
@@ -66,11 +66,11 @@
         async function startCamera() {
             const video = document.getElementById('camera');
             const constraints = {
-                video: { facingMode: 'environment' }  // Acessa a câmera traseira
+                video: { facingMode: 'environment' }  // Força a câmera traseira
             };
 
             try {
-                // Acessa a câmera do dispositivo
+                // Acessa a câmera traseira do dispositivo
                 const stream = await navigator.mediaDevices.getUserMedia(constraints);
                 video.srcObject = stream;
             } catch (err) {
@@ -78,7 +78,7 @@
             }
         }
 
-        // Chama a função para iniciar a câmera
+        // Chama a função para iniciar a câmera traseira
         startCamera();
     </script>
 
