--- a/index.html
+++ b/index.html
@@ -28,27 +28,27 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            transform: scaleX(-1); /* Espelha o vídeo para comportamento mais natural */
+            transform: scaleX(-1); /* Espelha o vídeo */
         }
 
-        /* Metade da tela com o efeito vermelho (olho esquerdo) */
+        /* Metade da tela com a cor vermelha (olho esquerdo) */
         #leftEye {
             position: absolute;
             top: 0;
             left: 0;
             width: 50%;
             height: 100%;
-            filter: sepia(1) saturate(10) hue-rotate(-60deg); /* Efeito vermelho */
+            background-color: red; /* Cor vermelha para o olho esquerdo */
         }
 
-        /* Metade da tela com o efeito verde (olho direito) */
+        /* Metade da tela com a cor verde (olho direito) */
         #rightEye {
             position: absolute;
             top: 0;
             right: 0;
             width: 50%;
             height: 100%;
-            filter: sepia(1) saturate(10) hue-rotate(120deg); /* Efeito verde */
+            background-color: green; /* Cor verde para o olho direito */
         }
 
     </style>
@@ -57,8 +57,8 @@
 
     <div id="cameraContainer">
         <video id="camera" autoplay></video>
-        <div id="leftEye"></div> <!-- Efeito vermelho para o olho esquerdo -->
-        <div id="rightEye"></div> <!-- Efeito verde para o olho direito -->
+        <div id="leftEye"></div> <!-- Cor vermelha para o olho esquerdo -->
+        <div id="rightEye"></div> <!-- Cor verde para o olho direito -->
     </div>
 
     <script>
